# todos_rust

./: Cargo.toml
migrations/: 20260430195750_create_todos_table.sql  20260513190000_add_timestamps_to_todos.sql  20260520190000_add_deleted_at_to_todos.sql
src/: app.rs  error.rs  main.rs  state.rs  todos.rs
