[package]
name = "first_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"

tokio = { version = "1", features = ["full"] }

chrono = { version = "0.4", features = ["serde"] }

sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "mysql",
  "macros",
  "chrono"
] }

serde = { version = "1", features = ["derive"] }

serde_json = "1"

reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

dotenvy = "0.15"
